<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"
        android:hint="@string/edtName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtLogin"
        android:hint="@string/edtLogin" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtSenha"
        android:hint="@string/edtSenha" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtLatitude"
            android:id="@+id/txtLatitude"
            android:layout_weight="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/txtLogitude"
            android:id="@+id/txtLongitude"
            android:layout_weight="50" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="164dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtLatitude"
            android:layout_weight="8.57" />

        <EditText
            android:layout_width="188dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtLogitude"
            android:layout_weight="6.15" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MAPA"
        android:id="@+id/btnMapa"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="247dp"
        android:layout_height="208dp"
        android:id="@+id/imgFoto"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.26" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="91dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSalvar"
            android:id="@+id/btnSalvaCadUsuario"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/login48"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            android:id="@+id/btnCancelCadUsuario"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/exit48" />
    </LinearLayout>

</LinearLayout>
