<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDescricao"
        android:hint="@string/edtDescricao" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtQuantidade"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:hint="@string/edtQuantidade" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnUnidadeMedida"
        android:layout_weight="0.07"
        android:spinnerMode="dropdown"
        android:entries="@array/aUnidadeMedida"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSalvar"
            android:id="@+id/btnSalvar"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            android:id="@+id/btnCancelar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>